intermittent checkin resume rendering.

--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,10 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/assets/css/pillar-1.css"
+              "src/assets/css/pillar-1.css",
+              "src/assets/fontawesome/css/all.min.css"
             ],
             "scripts": [
-              "src/assets/fontawesome/js/all.min.js"
             ]
           },
           "configurations": {
